style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');


@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');


.quicksand {
	font-family: "Quicksand", serif;
	font-optical-sizing: auto;
	font-weight: 400;
	font-style: normal;
}

.raleway {
	font-family: "Raleway", serif;
	font-optical-sizing: auto;
	font-weight: 400;
	font-style: normal;
}

/* Shared section END */

:root{
	--clr-orange: #ff4102;
	--clr-royalblue: #01ACFD;
	--clr-lightgreen:#93b500;
	--clr-purple:#d500ff;
	--clr-lightpurple: #de9deb;
	--clr-black:#000000;
	--clr-sayan: #3CD8E8;
		--clr-lightorange: #f3d0c4;
	--clr-white:#ffffff;
	--clr-gray:#e8e6e6;
	--clr-lightgray:#b6b6b6;
	--clr-darkgray:#928c8c;

	/* it should be a unique gradiant color */
	--clr-hover-bg:#2cff24;        
	--clr-hover-text: #fff;
	--clr-hover-bg: linear-gradient(to right, #7b4397 0%, #dc2430 51%, #7b4397 100%);
	--clr-hover-bg2: linear-gradient(to right, #7b4397 0%, #dc2430 51%, #7b4397 100%);


	--radius: 10px;
	--padding:8px;

	
}

.dev-border{
	border: dotted 3px red;
}

body{
	margin: 0;
	padding: 0;
	font-family: quicksand;
}

header,
.main-content-wrapper {
	width: 90%;
	margin: 0 auto;
}

main {
	background-image: url('assets/bg.png');
	background-color: white;
	background-image: linear-gradient(white, #ffa60b);
}
.flex{
	display: flex;
	
}


.btn{
	margin: 10px;
	
		text-align: center;
		text-transform: uppercase;
		transition: 0.5s;
		background-size: 200% auto;
		color: white;
		box-shadow: 0 0 20px #eee;
		padding: var(--padding);
		border-radius: var(--radius);
		border: none;
		cursor: pointer;
		background-color: var(--clr-darkgray);
		box-shadow: 2px 5px 10px gray;
	a{
		text-decoration: none;
		color: var(--clr-white);
	}
}


.btn:hover{
	background-image: var(--clr-hover-bg);
	background-position: right center;
	color: var(--clr-hover-text);
	a{
		color: var(--clr-hover-text);
	}
}


.btn-orange{
	background-color: var(--clr-orange);
	width: 100px;
	font-weight: 600;
	font-size: 16px;
}

.btn-sayan {
	background-color: var(--clr-sayan);
	width: auto;
	font-weight: 600;
	font-size: 16px;
	padding: 14px 18px;
	border-radius: 45px;
	font-weight: 600;
	font-family: "Railway", serif;

}
.btn-black{
	background-color: var(--clr-black);
	width: 150px;
	font-weight: 600;
	font-size: 16px;
}

.btn-purple {
	background-color: var(--clr-purple);
	width: auto;
	font-weight: 600;
	font-size: 16px;
	padding: 14px 18px;
	border-radius: 45px;
	font-weight: 600;
	font-family: "Railway", serif;
}

.btn-green {
	background-color: var(--clr-lightgreen);
	width: auto;
	font-weight: 600;
	font-size: 16px;
	padding: 14px 18px;
	border-radius: 45px;
	font-weight: 600;
	font-family: "Railway", serif;
}
.hide{
	display: none;
}
.show-block{
	display: block;
}

.show-inline{
	display: inline-block;
}

.section-default {
	margin-top: 10px;
	margin-bottom: 20px;
	padding-top: 10px;
	padding-bottom: 20px;
}

.section-caption{
	text-align: center;
	font-size: 40px;
	font-weight: 600;
	margin: 20px;
}
.card-default {
	/* background-color: var(--clr-white);
	border-radius: 10px; */
}
/* ----------Shared section END---------------------------------*/

/* Nav Section START */
.nav{
	justify-content: space-between;
	align-items: center;
	padding: var(--padding);

	.brand-name{
		text-transform: uppercase;
}

ul> li{
	list-style: none;
	margin-right: 20px;
}

a{
	text-decoration: none;
}
.tab-home{
	color: var(--clr-orange);
}
.tab-about{
	color: var(--clr-royalblue);
}

.tab-facilities{
	color: var(--clr-sayan);
}

.tab-admission{
	color: var(--clr-purple);
}
}
/* ----------Nav section END---------------------------------*/


/* Marquee Section START */
.scrolling-text-container {
	display: flex;
	align-items: center;
	background-color: var(--clr-white);
	margin-top: 40px;
}

.scrolling-text-container span {
	position: relative;
	display: inline-block;
	flex-shrink: 0;
	padding: 8px 20px;
	background: var(--clr-orange);
	color: var(--clr-white);
	clip-path: polygon(0 0, 85% 0, 100% 100%, 0 100%);
	font-weight: 600;

}

/* -----------Marquee Section END------------- */
/* Banner Section Start  */
.banner{
	justify-content: space-between;
	gap: 50px;

	.banner-caption{
		font-size: 3rem;
		font-weight: 600;
		color: var(--clr-black);
	}
	.Empowering{
		color: var(--clr-orange);
	}
	.towards{
		color: var(--clr-royalblue);
	}

	.banner-description{
		/* text-align: justify; */
		color: var(--clr-darkgray);
		margin-bottom: 30px;
	}

}
/* ----------Banner section END---------------------------------*/


/* Curriculum Section  START  */
.curriculum{
	flex-direction: column;
	align-items: center;
	}

.curriculum-card-wrapper {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-column-gap: 30px;
	}

.curriculum-card {
	border-radius: 1rem;
	text-align: center;
	padding: 2rem;
	box-shadow: 10px 10px 20px #949494;
		/* transition: .4s; */
}

.curriculum-card:hover {
	/* transform: scale(1.1); */
	/* background-color: tomato; */
}
.card-caption {
	font-size: 1.5rem;
	font-weight: 800;
	line-height: 30px;
	color: #202020;
	margin-top: 40px;
}

.card-description {
	color: #808080;
}
.btn-card {
	border: none;
	background: transparent;
}
.btn-card a {
	text-decoration: none;
}
#curriculum-card-kinder {
	background-color: white;
	background-image: linear-gradient(#b8dff3, white);
}

#curriculum-card-kinder:hover {
	background-color: white;
	background-image: linear-gradient(white, #b8dff3);
	;
}

#btn-kinder a {
	color: var(--clr-royalblue);
}

#card-elementary {
	background-color: white;
	background-image: linear-gradient(var(--clr-lightorange), white);
}

#card-elementary:hover {
	background-color: white;
	background-image: linear-gradient(white, var(--clr-lightorange));
}

#btn-elementary a {
	color: var(--clr-orange);
}

#card-middle {
	background-color: white;
	background-image: linear-gradient(var(--clr-lightpurple), white);
}

#card-middle:hover {
	background-color: white;
	background-image: linear-gradient(white, var(--clr-lightpurple));
}

#btn-middle {
	color: var(--clr-purple);
}




.arrow-container{
	width: 100%;
	height: 100%;
	/* background-color: orchid; */
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 10px;
	
}


.greater-container,
.less-container
{
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	background-color: tomato;
	width: 50px;
	height: 50px;
	border-radius: 50%;
	text-align: center;
	font-size: 20px;
	font-weight: 800;
	color: white;
}

.less-container{
	margin-right: 8px;
}

















/* --------------------Curriculum Section  END----------------------------  */

/* Story Section START */
.story {
	flex-direction: column;
	/* justify-content: space-between; */
	align-items: center;
}

.story-card-wrapper {

	display: grid;
	grid-template-columns: repeat(2, 1fr);
	grid-column-gap: 10px;
}

.story-right-container {
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	gap: 10px;
}

.story-left-container img,
.story-right-img img {
	width: 100%;
	border-radius: 10px 10px 0px 0px;
	/* border-radius: 5% 5% 0px 0px; */
}

.story-left-container,
.story-right-card {
	background-color: var(--clr-white);
	border-radius: 10px;
	box-shadow: 2px 5px 10px gray;
}

.story-left-description,
.story-right-card-desc {
	padding: 20px;
	position: relative;

}

.set-story-btn-position {
	position: absolute;
	top: -30px;
	left: 50px;

}

.story-card-wrapper {
	margin-bottom: 40px;
}


/* Footer Section START */
.footer {
	background-color: var(--clr-royalblue);
	margin-top: 0;
	padding-top: 0;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-column-gap: 20px;
	padding: 80px;

}

.footer-brand-info {
	color: var(--clr-white);
}
.footer-brand .footer-brand,
.brand-name {
	display: inline-block;
}
	
.footer-menus ul {
					list-style: none;
}
	
				.footer-menu {
					text-decoration: none;
					color: var(--clr-white);
				}
	
				.footer-social-icons {
					flex-direction: column;
					color: var(--clr-white);
					align-items: center;
				}
	
				.social-icons {
					flex-direction: row;
					justify-content: space-evenly;
					padding: 5px;
						width: calc(100% - 20px);
				}
	
		/* -------------Footer Section END------------ */
	
	
	
		/* ------------------Story Section End----------------- */
/* ===============================================================
----------------Responsive START
=============================================================== */

@media screen and (max-width:576px) {

	/* #menu-icon{
		display: block;
	} */
	 .tabs{
		display: none;
	 }
.nav {
	border-bottom: 4px solid var(--clr-orange);
	padding-bottom: 25px;
}
#tab-contact,
.brand-name {
		display: none;
	 }

	#menu-icon
	{
		display: block;
	}

	.banner{
		flex-direction: column-reverse;
		gap: 10px;
	}

	.banner-img img
	 {
		width: 100%;
	}

	.banner-content,
	.banner-description{
		text-align: center;
	}

	.banner-description{
		text-align: center;
	}


.curriculum .curriculum-card-wrapper {
	grid-template-columns: 1fr;
	grid-gap: 20px;
}

/* .story-card-wrapper{
	display: grid;
grid-template-columns: repeat(2, 1fr);
} */

.story-left-container {
	display: none;
}

.story-card-wrapper {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}


.footer {
	grid-template-columns: 1fr;
	grid-row-gap: 10px;
		padding: 20px;
}



}

/* ---------------Responsive END---------------------------------------- */

